# cffi_multi_inheritance_example

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
units_cpp/: CMakeLists.txt  units.h  units.hpp  units.py  units_c.cpp
units_py/: TODO.MD  afsim_interface.py  object.py  plugin_util.py  requirements.txt  test.py  test_instance_variables.py  units.h  units.py
units_py/tests/: test_globals.py  test_vec3.py  test_x.py  test_y.py
